src/test/resources/validation/error/implicitJoinFailure/schema.graphqls
type Query {
  studenter(
    eierInstitusjonsnummer: String! @column(name: "INSTITUSJONSNR_EIER"),
    first: Int = 100,
    after: String
  ): StudentVedInstitusjon
}

type StudentVedInstitusjon @node(table: "STUDENT") {
  id: ID!
  studentVedInstitusjonId: ID!
  studentkort: [Studentkort!] @splitQuery # Should be ok, exists key join between STUDENT and STUDENTKORT.
  studentkort2: [Studentkort2!] @splitQuery # Should fail, no join can be deduced between STUDENT and KULL.
}

type Studentkort @node(table: "STUDENTKORT") {
  id: ID!
  studentkortnummer: String! @column(name: "STUDENTKORTNR")
}

type Studentkort2 @node(table: "KULL") {
  id: ID!
  studentkortnummer: String! @column(name: "STUDENTKORTNR")
}
